Add matches dummy page, fix likes

--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -2,7 +2,7 @@
     gap: 10px;
     display: block;
     margin: auto;
-    top: 546px;
+    /* top: 546px; */
     left: 11px;
     width: 45%;
     height: 15%;
