--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -17,16 +17,38 @@
     justify-content: center;
     background-color: rgba(255, 255, 255, 1);
 }
+
+.body-cont {
+  display: flex;
+  flex-direction:column;
+  /* justify-content: center; */
+  /* height: 100%; */
+  margin: 0;
+  background-color: #49B7B0;
+}
+.card-container {
+  /* display: flex; */
+  flex-wrap: wrap;
+  justify-content: center;
+  /* gap: 16px; */
+  /* overflow-x: auto; Horizontal scrolling */
+  /* overflow-y: hidden; Hide vertical overflow */
+}
 .card {
-    display: flex;
+    /* flex: 1 1 200px; */
+    /* display: flex; */
     overflow: auto;
-    align-items: center;
+    /* justify-content: space-between; */
+    align-items: left;
     flex-direction: column;
+    width: 200px;
+    /* height: 500px; */
+
   }
 .connectly-logo {
     top: 0px;
     left: 0px;
     width: 10%;
-    height: 10%;
+    height: 120%;
     position: 'top';
   }
