--- a/src/auth.css
+++ b/src/auth.css
@@ -2,8 +2,8 @@
     color: red;
 }
 .auth-logo {
-    margin-left: 22%;
+    
     margin-top: 20%;
-    width:60%;
-    height:25%;
+    width:2px;
+    height: 1px;;
 }
