--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -1,4 +1,5 @@
 .my-button {
+    background-color: white;
     gap: 10px;
     display: block;
     margin: auto;
@@ -9,13 +10,18 @@
     padding: 10px;
     align-items: center;
     flex-shrink: 0;
-    border-color: rgba(0, 0, 0, 1);
+    border-color: rgb(255, 255, 255);
     border-style: solid;
     border-width: 1px;
     border-radius: 100px;
     flex-direction: column;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 1);
+}
+
+.my-button:hover{
+  background-color: #B571B7;
+  cursor: pointer;
+  font-size: 25px;
 }
 
 .body-cont {
