--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -2,9 +2,7 @@
     background-color: white;
     gap: 10px;
     display: block;
-    margin: auto;
-    /* top: 546px; */
-    left: 11px;
+    margin: 0 auto;
     width: 45%;
     height: 15%;
     padding: 10px;
@@ -28,30 +26,19 @@
   display: flex;
   flex-direction:column;
   min-height: 100vh;
-  /* justify-content: center; */
-  /* height: 100%; */
   margin: 0;
   background-color: #7DE1DB;;
 }
 .card-container {
-  /* display: flex; */
   flex-wrap: wrap;
   justify-content: center;
-  /* margin-top: 50%; */
-  /* gap: 16px; */
-  /* overflow-x: auto; Horizontal scrolling */
-  /* overflow-y: hidden; Hide vertical overflow */
 }
 .card {
-    /* flex: 1 1 200px; */
-    /* display: flex; */
-    overflow: auto;
-    /* justify-content: space-between; */
+    display: flex;
+    justify-content: space-between;
     align-items: left;
     flex-direction: column;
     width: 200px;
-    /* height: 500px; */
-
   }
 .connectly-logo {
     top: 0px;
